# evident

./: .dockerignore  .gitignore  .gitmodules  EVIDENT_DRIVER.md  EVIDENT_PHASE5_PR5.codex-review-v2.md  EVIDENT_PHASE5_PR5.codex-review.md  EVIDENT_PHASE5_PR5_DRAFT.md  EVIDENT_PHASE5_PR6.codex-review-v2.md  EVIDENT_PHASE5_PR6.codex-review.md  EVIDENT_PHASE5_PR6_DRAFT.md  EVIDENT_PROPOSAL_claim-statement_DRAFT.md  EVIDENT_THIRD_PARTY_OBSERVATION.codex-review-v2.md  EVIDENT_THIRD_PARTY_OBSERVATION.codex-review.md  EVIDENT_THIRD_PARTY_OBSERVATION_DRAFT.md  LICENSE  OVERVIEW.md  README.md  evident.yaml
evident-agent/: EXAMPLES.md  README.md  pyproject.toml
evident-agent/docs/: mcp-server.md
evident-agent/evident_agent/: __init__.py  cli.py  concordance.py  curator.py  docker.py  drive.py  evidence.py  last_concorded.py  manifest.py  prompt.py  replay.py  review.py  review_sidecar.py  review_walkthrough.py  scoring.py  sidecar.py  typed_trust.py  violation.py
evident-agent/evident_agent/extract/: __init__.py  audit.py  cli.py  framing.py  metadata.py  paper.py  redaction.py  render.py  repo.py  validator.py
evident-agent/evident_agent/mcp/: __init__.py  __main__.py  errors.py  policy.py  server.py  tools.py
evident-agent/examples/: proteon_sasa_release.sh
evident-agent/tests/: test_cli_dry_run.py  test_cli_review.py  test_concordance.py  test_curator.py  test_docker.py  test_drive.py  test_evidence.py  test_extract_cli.py  test_extract_framing.py  test_extract_metadata.py  test_extract_paper.py  test_extract_paper_cli.py  test_extract_render.py  test_extract_repo.py  test_extract_typed_trust_roundtrip.py  test_extract_validator.py  test_manifest.py  test_mcp_loadbearing.py  test_mcp_policy.py  test_mcp_tools_unit.py  test_prompt.py  test_rephrase.py  test_replay_contract.py  test_required_fixtures.py  test_review.py  test_review_sidecar.py  test_review_walkthrough.py  test_scoring.py  test_sidecar.py  test_typed_trust.py  test_violation.py
typed-trust/: Cargo.toml
typed-trust/src/: claim.rs  derivation.rs  evidence.rs  graph.rs  html_render.rs  human_render.rs  identity.rs  ids.rs  lib.rs  loader.rs  main.rs  provenance.rs  render.rs  report.rs  review.rs  synthesize.rs  translate.rs
typed-trust/src/mcp/: handlers.rs  mod.rs  tools.rs
typed-trust/tests/: html_render.rs  human_render.rs  json_output.rs  mcp_loadbearing.rs  mcp_tools.rs  panel_summary.rs  promote_from_extracted.rs  proteon_walkthrough.rs  review_events_sidecar.rs  supersede_loadbearing.rs  synthesize_and_render.rs  translator.rs
typed-trust/tests/fixtures/: contested.html  (+7 more)
(+96 files in other folders)
