[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "evident-agent"
version = "0.1.0"
description = "EVIDENT agent — populates typed-trust inputs by executing manifest verification procedures"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
dependencies = [
  "pyyaml>=6.0",
  "click>=8.1",
  "anthropic>=0.40",
  "mcp>=1.2,<2",
]

[project.scripts]
evident-agent = "evident_agent.cli:main"
evident-agent-mcp = "evident_agent.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["evident_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
