[package]
name = "typed-trust"
version = "0.1.0"
edition = "2021"
description = "Typed Trust — Rust scaffold for concepts/typed-trust.md"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"

[lints.rust]
unused = "warn"
